# E-Commerce-Product-Description-Generator-using-VLM

./: .gitignore  CLAUDE.md  CV_Milestone2.docx  KAGGLE_GUIDE.md  README.md  config.py  improvement_plan.md  pyproject.toml  qualitative_report.html  requirements.txt  run.py  stanford_context.md
dedup/: deduplicator.py
models/: COLAB_GUIDE.md  compare_results.py  compare_results_colab.py  eval_setup.py  hparam_sweep.py  prepare_colab_zip.py  prepare_kaggle_zip.py  qualitative_eval_colab.py  qualitative_report.py  save_results.py  two_stage_pipeline.py
models/api_baseline/: __init__.py  gemini_baseline.py
models/augment/: augment_descriptions.py  test_augment.py
models/blip/: __init__.py  evaluate.py  evaluate_colab.py  evaluate_kaggle.py  train_colab.py  train_kaggle.py
models/clip_gpt2/: __init__.py  evaluate.py  evaluate_colab.py  model.py  train_colab.py
models/eval/: attention_viz.py  category_breakdown.py  eda.py  qualitative_sampler.py  training_curves.py
models/results/: all_metrics.json  blip_metrics.json  category_breakdown.json  clip_gpt2_metrics.json  hparam_sweep.json  metadata_baseline_metrics.json  qualitative_report.html  qualitative_samples.json  training_history_blip.json  training_history_clip_gpt2.json  training_sweep_blip.json  training_sweep_clip_gpt2.json  two_stage_metrics.json  two_stage_metrics_blip.json  two_stage_metrics_clip_gpt2.json
models/shared/: __init__.py  config.py  dataset.py  metrics.py
models/stage2/: gpt2_refiner.py  (+1 more)
organizer/: dataset_builder.py
pipeline/: cleaner.py
scraper/: daraz_scraper.py
(+13 files in other folders)
