[project]
name = "daraz-vlm"
version = "0.1.0"
requires-python = "==3.11.*"

[tool.uv]
dev-dependencies = []

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
